<resources>
    <string name="app_name">건빵</string>

    <!--sign-->
    <string name="sign_login_with_email">이메일로 로그인</string>
    <string name="sign_signup_with_email">이메일로 회원가입</string>
    <string name="btn_kakao_sign">카카오로 계속하기</string>
    <string name="btn_signup_text">회원가입</string>
    <string name="tv_look_around">둘러보기</string>

    <!--login-->
    <string name="login_text_phrase">로그인</string>
    <string name="login_email_hint">이메일을 입력해주세요</string>
    <string name="login_password_hint">비밀번호를 입력해주세요</string>
    <string name="login_have_no_account">계정이 없으신가요?</string>
    <string name="login_goto_signup"><u>회원가입하기</u></string>
    <string name="login_bottom_message">이메일 및 비밀번호를\n확인해주세요</string>

    <!--login needed-->
    <string name="login_needed_phrase">별사탕님 맞춤 건빵을 추천하려면</string>
    <string name="login_need">이 필요해요!</string>
    <string name="login_needed_phrase_bakery_report_review">리뷰를 신고하려면</string>
    <string name="login_needed_phrase_bakery_write_review">리뷰를 작성하려면</string>
    <string name="login_needed_phrase_bakery_bookmark">건빵집을 저장하려면</string>
    <string name="login_needed_phrase_my_page">별사탕님의 페이지를 만들려면</string>

    <!--signup-->
    <string name="tv_signup_notice_phrase">회원가입을 위한\n정보를 알려주세요!</string>
    <string name="tv_email">이메일</string>
    <string name="email_hint">이메일을 입력해주세요</string>
    <string name="email_error_msg">올바른 이메일을 입력해주세요</string>
    <string name="email_already_exist">이미 존재하는 이메일입니다</string>
    <string name="email_validate_to_use">사용 가능한 이메일입니다</string>
    <string name="txt_double_check_btn">중복확인</string>
    <string name="txt_next_btn">다음</string>
    <string name="txt_start_btn">시작하기</string>
    <string name="tv_password">비밀번호</string>
    <string name="password_hint">영문, 숫자 포함 8자리 이상</string>
    <string name="tv_double_check_password">비밀번호 재확인</string>
    <string name="double_check_hint">비밀번호를 재입력해주세요</string>
    <string name="password_error_msg">영문, 숫자 포함 8자리 이상</string>
    <string name="password_double_check_error_msg">비밀번호를 확인해주세요</string>
    <string name="welcome_nickname">건빵에 오신 걸 환영해요!\n어떻게 불러드릴까요?</string>
    <string name="tv_nickname">닉네임</string>
    <string name="nickname_hint">닉네임 8자 이내, 특수문자 금지</string>
    <string name="nickname_error">8자 이내, 특수문자 금지</string>
    <string name="available_email">사용 가능한 이메일입니다</string>
    <string name="unavailable_email">이미 존재하는 이메일입니다</string>
    <string name="available_nickname">사용 가능한 닉네임이에요!</string>
    <string name="unavailable_nickname">이미 존재하는 닉네임이에요</string>
    <string name="bottom_sheet_ok">확인</string>

    <!--  home  -->
    <string name="home_title">%s님\n건빵에 오신걸 환영해요!</string>
    <string name="home_best_title1">%s님 맞춤</string>
    <string name="home_best_bakery_title2">BEST 건빵집</string>
    <string name="home_search_hint">궁금한 건빵집을 입력해주세요!</string>
    <string name="home_best_review_title2">BEST 리뷰</string>
    <string name="home_bubble_speech_title">맞춤 빵집을 위한 필터를 설정해 보세요!</string>
    <string name="home_caption">건빵은 건강한 빵집의 위치와 성분 정보를 제공하여 소비자의 선택을 돕는 용도의 서비스입니다. 건빵의 모든 정보는 제조사에서 제공한 정보입니다. 이는 소비자의 구매를 돕기 위한 참고 사항이며, 제공 정보의 오류에 대한 책임을 지지 않습니다.</string>
    <string name="review_and_bookmark_count">리뷰(%d)・저장(%d)</string>
    <string name="bookmark_count">(%d)</string>
    <string name="home_best_review_text">\"%s\"</string>

    <!--    my page    -->
    <string name="my_page_title">마이페이지</string>

    <string name="my_page_bookmark">저장 목록</string>
    <string name="my_page_review">내가 쓴 리뷰</string>

    <string name="my_page_terms_of_use">이용약관</string>
    <string name="my_page_inquiry">문의하기</string>
    <string name="my_page_version_info">버전 정보</string>
    <string name="tv_my_page_app_version">v%s</string>
    <string name="my_page_logout">로그아웃</string>
    <string name="my_page_withdraw">회원탈퇴</string>

    <string name="my_store_list_empty_view_description">저장된 건빵집이 없어요!</string>
    <string name="my_page_review_empty_view_description">내가 쓴 리뷰가 없어요!</string>

    <!--  search view  -->
    <string name="search_hint">빵집·지역·역 명을 검색해 보세요!</string>
    <string name="search_recent_search">최근 검색어</string>
    <string name="search_delete_all">전체삭제</string>
    <string name="search_result">건빵집 결과</string>
    <string name="search_init_description">궁금하신 건빵집을\n검색해보세요!</string>
    <string name="search_count">%d개</string>
    <string name="search_empty_description1">검색결과가 없어요</string>
    <string name="search_empty_description2">다른 키워드로 검색해보세요!</string>
    <string name="nearest_station">%s∙%s</string>

    <!--    detail    -->
    <string name="detail_create_review">리뷰 작성하기</string>
    <string name="detail_more_info">가게 상세정보</string>
    <string name="detail_homepage"><u>웹사이트</u></string>
    <string name="detail_instagram"><u>인스타그램</u></string>
    <string name="detail_notice">웹사이트에 성분정보가 있어요!</string>
    <string name="detail_menu">가게 메뉴</string>
    <string name="detail_menu_notice">가게 상세정보 및 메뉴는 업체에서 제공한 정보를 바탕으로 합니다. 건빵집 방문 시 한 번 더 확인하시기를 권장합니다.</string>
    <string name="detail_review">건빵 리뷰</string>
    <string name="detail_taste">맛있어요</string>
    <string name="detail_special">특별한 메뉴</string>
    <string name="detail_kind">친절해요</string>
    <string name="detail_zero">제로웨이스트</string>
    <string name="detail_written_reviews">작성된 리뷰</string>
    <string name="detail_declare">신고</string>
    <string name="detail_no_review">작성된 리뷰가 없어요!</string>
    <string name="detail_review_count">%d개</string>
    <string name="detail_basic">기본순</string>
    <string name="detail_num">(%d)</string>

    <!--    snackbar    -->
    <string name="snackbar_save">저장되었어요 !</string>
    <string name="snackbar_save_cancel">저장이 취소되었어요 !</string>

    <!--  bakery list view  -->
    <string name="bakery_list_sort">정렬</string>
    <string name="bakery_list_sort_type_default">기본순</string>
    <string name="bakery_list_sort_type_review">리뷰 많은 순</string>
    <string name="bakery_list_title">건빵집 리스트</string>
    <string name="bakery_bread_type_hard">하드빵류</string>
    <string name="bakery_bread_type_dessert">디저트류</string>
    <string name="bakery_bread_type_branch">브런치류</string>
    <string name="bakery_list_my_filter_apply">내 필터 적용</string>

    <!--    filter    -->
    <string name="filter_skip">건너뛰기</string>
    <string name="filter_next">다음</string>
    <string name="filter_apply">적용하기</string>

    <string name="filter_ask_bread_type">어떤 빵을 원하시나요?</string>
    <string name="filter_duplicate_selection">중복선택이 가능해요!</string>
    <string name="filter_ask_nutrient_type">원하시는 성분공개 정도를\n선택해주세요!</string>
    <string name="start_geon_ppang">시작하기</string>

    <string name="main_purpose_title">맞춤 빵집 추천을 위해\n건빵을 찾은 이유를 알려주세요!</string>
    <string name="main_purpose_type_health_title">건강 · 체질</string>
    <string name="main_purpose_type_health_des">아토피, 알레르기, 당뇨, 소화불량 등이 있어요.</string>
    <string name="main_purpose_type_diet_title">맛 · 다이어트</string>
    <string name="main_purpose_type_diet_des">맛있어서 먹거나, 체중조절이 필요해요.</string>
    <string name="main_purpose_type_vegan_title">비건 · 채식지향</string>
    <string name="main_purpose_type_vegan_des">종교, 환경, 동물, 노동권 문제에 공감해요.</string>

    <string name="bread_type_gluten_free_title">글루텐프리</string>
    <string name="bread_type_gluten_free_des">NO 글루텐</string>
    <string name="bread_type_vegan_title">비건빵</string>
    <string name="bread_type_vegan_des">NO 동물성재료\n(유제품, 계란 등)</string>
    <string name="bread_type_nut_free_title">넛프리</string>
    <string name="bread_type_nut_free_des">NO 견과류</string>
    <string name="bread_type_sugar_free_title">대체당</string>
    <string name="bread_type_sugar_free_des">NO 설탕\n(비설탕감미료)</string>

    <string name="nutrient_type_nutrient_open_title">영양성분 보기</string>
    <string name="nutrient_type_nutrient_open_des">영양성분까지 공개한 건빵집을 볼래요!</string>
    <string name="nutrient_type_ingredient_open_title">원재료 보기</string>
    <string name="nutrient_type_ingredient_open_des">원재료를 공개한 건빵집을 볼래요!</string>
    <string name="nutrient_type_all_open_title">모든 건빵집 보기</string>
    <string name="nutrient_type_all_open_des">일단 더 많은 건빵집을 볼래요!</string>

    <string name="welcome_to_geonppang">%s님\n건빵에 오신 걸 환영해요!</string>

    <!--review-->
    <string name="review_writing">리뷰 쓰기</string>
    <string name="how_was_the_store">건빵집은 어떠셨나요?</string>
    <string name="chip_like">좋았어요</string>
    <string name="chip_soso">아쉬웠어요</string>
    <string name="what_do_you_recommend">어떤 것을 추천하나요?</string>
    <string name="chip_tasty">맛있어요</string>
    <string name="chip_kind">친절해요</string>
    <string name="chip_special_menu">특별한 메뉴</string>
    <string name="review_text_count">%d/120자</string>
    <string name="review_caption">솔직하게 작성해주신 리뷰는 건빵 소비자에게 도움이 됩니다! 하지만 선량한 업주나 제3자의 권리를 침해하는 게시물(허위 리뷰, 명예훼손, 욕설, 타임 비방글 등)은 안내 없이 삭제되며, 관련 법률에 따라 제재를 받을 수 있습니다. 또한, 건빵은 이에 대한 책임을 지지 않습니다. </string>
    <string name="review_text_good_hint">추가로 좋았던 점이 있다면 말씀해 주세요!</string>
    <string name="review_text_bad_hint">자유롭게 의견을 말씀해 주세요!</string>
    <string name="review_writing_title">건대 초코빵</string>
    <string name="review_key_word_type_taste">맛있어요</string>
    <string name="review_key_word_type_kind">친절해요</string>
    <string name="review_key_word_type_special_menu">특별한 메뉴</string>
    <string name="review_key_word_type_zero_waste">제로 웨이스트</string>
    <string name="review_writing_success_title">작성이 완료되었어요!</string>
    <string name="review_writing_cancel_title">정말 리뷰작성을 그만 하실건가요?</string>
    <string name="review_writing_cancel_description">여러분이 작성해주신 리뷰가\n다른 유저의 건빵생활을 도울 수 있어요</string>
    <string name="review_writing_confirm">확인</string>
    <string name="review_writing_stop">네, 그만 쓸래요</string>
    <string name="review_writing_continue">아니요, 계속 쓸래요</string>
    <string name="my_review_detail_empty">작성한 리뷰가 없어요</string>
    <string name="review_writing_btn_text">작성하기</string>

    <!--logout dialog-->
    <string name="dialog_type_logout_context">정말로 로그아웃 하실건가요?</string>
    <string name="dialog_type_logout_left_btn">네</string>
    <string name="dialog_type_logout_right_btn">아니오</string>

    <!--withdraw dialog-->
    <string name="dialog_type_withdraw_context">회원님의 정보가 사라집니다.\n정말로 떠나실건가요?</string>
    <string name="dialog_type_withdraw_left_btn">떠날래요</string>
    <string name="dialog_type_withdraw_right_btn">더 써볼래요</string>

    <!--report-->
    <string name="report">리뷰 신고</string>

    <string name="report_category">신고하려는 사유를 선택해 주세요!</string>
    <string name="report_category_advertising">홍보 및 신뢰할 수 없는 게시물</string>
    <string name="report_category_hate">욕설, 음란어, 혐오 발언 사용</string>
    <string name="report_category_copyright">명예훼손, 저작권 침해</string>
    <string name="report_category_etc">그 외 다른 문제</string>

    <string name="report_content">자세한 신고 사유는 아래 적어주세요!</string>
    <string name="report_content_hint">신고 내용을 입력해 주세요.</string>
    <string name="report_content_count">%d/140자</string>

    <string name="report_bottom_text">여러분의 신고를 바탕으로 깨끗한 리뷰를 제공해 드릴 수 있도록 노력하겠습니다.</string>

    <string name="report_do_report">신고하기</string>

    <string name="report_success_title">신고가 완료됐어요!</string>탕

    <!--  userRoleType  -->
    <string name="user_role_type_member_none_title">별사탕</string>
</resources>