<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.sopt.geonppang.presentation.login.LogInViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_login_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TextView
                android:id="@+id/tv_input_phrase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/login_text_phrase"
                android:textAppearance="@style/TextAppearance.Title1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linear_login_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/background_normal_status"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/tv_input_phrase"
                app:layout_constraintStart_toStartOf="@id/tv_input_phrase"
                app:layout_constraintTop_toBottomOf="@id/tv_input_phrase">


                <TextView
                    android:id="@+id/tv_login_email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/tv_email"
                    android:textAppearance="@style/TextAppearance.BodyB2"
                    android:textColor="@color/gray_400" />

                <EditText
                    android:id="@+id/et_write_your_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="14dp"
                    android:background="@null"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="5dp"
                    android:text="@={viewModel.loginEmail}"
                    android:textAppearance="@style/TextAppearance.Headline"
                    android:textColorHint="@color/gray_300" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_normal_status"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/linear_login_email"
                app:layout_constraintStart_toStartOf="@id/linear_login_email"
                app:layout_constraintTop_toBottomOf="@id/linear_login_email">

                <TextView
                    android:id="@+id/tv_login_password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/tv_password"
                    android:textAppearance="@style/TextAppearance.BodyB2"
                    android:textColor="@color/gray_400" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleDrawable="@drawable/toggle_icon_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_write_your_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:padding="0dp"
                        android:paddingStart="18dp"
                        android:text="@={viewModel.loginPassword}"
                        android:textAppearance="@style/TextAppearance.Headline"
                        android:textColorHint="@color/gray_300"
                        android:translationY="-5dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tv_no_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/login_have_no_account"
            android:textAppearance="@style/TextAppearance.BodyB2"
            android:textColor="@color/gray_300"
            app:layout_constraintBottom_toTopOf="@id/tv_goto_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_goto_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login_goto_signup"
            android:textAppearance="@style/TextAppearance.BodyB2"
            android:textColor="@color/gray_500"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.FullButton.Basic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/spacing20"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@{viewModel.isLoginEmail() == true &amp; viewModel.isLoginPassword() == true ? @color/main_2 : @color/gray_200}"
            android:enabled="@{viewModel.isLoginPassword() == true}"
            android:paddingVertical="18dp"
            android:text="@string/login_text_phrase"
            android:textAppearance="@style/TextAppearance.BodyM1"
            android:textColor="@{viewModel.isLoginEmail() == true &amp; viewModel.isLoginPassword() == true ? @color/white : @color/gray_400}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/main_3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>