<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view_bottom_sheet_top"
            android:layout_width="0dp"
            android:layout_height="6dp"
            android:layout_marginHorizontal="150dp"
            android:layout_marginTop="@dimen/spacing14"
            android:background="@drawable/shape_rectangle_bottom_sheet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_review_writing_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:src="@drawable/img_review_writing_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_bottom_sheet_top" />

        <TextView
            android:id="@+id/tv_review_writing_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing20"
            android:text="@string/review_writing_cancel_title"
            android:textAppearance="@style/TextAppearance.Title2"
            android:textColor="@color/gray_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_review_writing_success" />

        <TextView
            android:id="@+id/tv_review_writing_success_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing20"
            android:text="@string/review_writing_cancel_description"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.BodyM2"
            android:textColor="@color/gray_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_review_writing_success" />

        <View
            android:id="@+id/view_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="37dp"
            android:background="@color/gray_200"
            app:layout_constraintTop_toBottomOf="@id/tv_review_writing_success_description" />

        <TextView
            android:id="@+id/tv_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="18dp"
            android:text="@string/review_writing_stop"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.BodyM1"
            android:textColor="@color/gray_400"
            app:layout_constraintEnd_toEndOf="@id/view_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_top" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:background="@color/gray_200"
            app:layout_constraintBottom_toBottomOf="@id/tv_stop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_stop" />

        <TextView
            android:id="@+id/tv_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:paddingVertical="18dp"
            android:text="@string/review_writing_continue"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.BodyM1"
            android:textColor="@color/gray_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_divider"
            app:layout_constraintTop_toBottomOf="@id/view_top" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>