<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginNeedType"
            type="com.sopt.geonppang.presentation.type.LoginNeededType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing24" />

        <ImageView
            android:id="@+id/iv_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:src="@drawable/ic_delete_keyword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_login_needed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_login_bread"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_needed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing24"
            android:text="@{loginNeedType.titleRes}"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Title2"
            android:textColor="@color/gray_500"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/iv_login_needed"
            tools:text="@string/login_needed_phrase" />


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_text_phrase"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Title2"
            android:textColor="@color/main_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_need"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_login_needed" />

        <TextView
            android:id="@+id/tv_need"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_need"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Title2"
            android:textColor="@color/gray_500"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/tv_login"
            app:layout_constraintTop_toBottomOf="@id/tv_login_needed" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_kakao"
            style="@style/Widget.FullButton.Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/kakao_point"
            android:paddingVertical="18dp"
            android:text="@string/btn_kakao_sign"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Headline"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_need" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:src="@drawable/ic_kakao"
            app:layout_constraintBottom_toBottomOf="@+id/btn_start_kakao"
            app:layout_constraintStart_toStartOf="@+id/btn_start_kakao"
            app:layout_constraintTop_toTopOf="@+id/btn_start_kakao" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_start_with_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_start_kakao"
            app:layout_constraintStart_toStartOf="@id/btn_start_kakao"
            app:layout_constraintTop_toBottomOf="@id/btn_start_kakao">

            <TextView
                android:id="@+id/tv_login_with_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="6dp"
                android:text="@string/sign_login_with_email"
                android:textAppearance="@style/TextAppearance.CaptionB1"
                android:textColor="@color/gray_400"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_line"
                android:layout_width="1dp"
                android:layout_height="12dp"
                android:layout_marginHorizontal="12dp"
                android:background="@color/gray_400"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_signup_with_email"
                app:layout_constraintStart_toEndOf="@id/tv_login_with_email"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_signup_with_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="6dp"
                android:text="@string/sign_signup_with_email"
                android:textAppearance="@style/TextAppearance.CaptionB1"
                android:textColor="@color/gray_400"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/view_line"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>