<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sopt.geonppang.presentation.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="@+id/et_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_search" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/background_search_box"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:text="@={viewModel.inputSearch}"
            android:textAppearance="@style/TextAppearance.BodyM1"
            android:textColor="@color/gray_700"
            android:textColorHint="@color/gray_300"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <!--   TODO naming 수정     -->
        <ImageView
            android:id="@+id/iv_search_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@{viewModel.inputSearch.empty ? @drawable/ic_search : @drawable/ic_delete}"
            app:layout_constraintBottom_toBottomOf="@+id/et_search"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintTop_toTopOf="@+id/et_search"
            tools:src="@drawable/ic_search" />

        <TextView
            android:id="@+id/tv_search_recent_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/search_recent_search"
            android:textAppearance="@style/TextAppearance.Headline"
            android:textColor="@color/gray_600"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/et_search" />

        <TextView
            android:id="@+id/tv_search_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_delete_all"
            android:textAppearance="@style/TextAppearance.BodyB2"
            android:textColor="@color/gray_300"
            app:layout_constraintBottom_toBottomOf="@+id/tv_search_recent_search"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintTop_toTopOf="@+id/tv_search_recent_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>